# pmux

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  design.md
.cursor/rules/: terminal-implementation.mdc
.github/workflows/: release.yml
crates/terminal_bench/: Cargo.toml
docs/: design-gap-analysis.md  embeddable-terminal-options-brainstorm.md  gpui-terminal-vs-libghostty.md  libghostty-gpui-integration-deep-dive.md  libghostty-rust-integration-research.md  shell-integration.md  tmux-integration-architecture-analysis.md
docs/plans/: 2026-02-25-spec2-implementation.md  2026-02-25-spec2-sidebar-terminal-design.md  2026-02-28-input-path-zed-style.md  2026-02-28-p1-config-backend.md  2026-02-28-phase2-4-refactoring.md  2026-02-28-remote-channels.md  2026-02-28-route-b-entity-split-implementation.md  2026-02-28-route-b-zed-style-entity-split-brainstorm.md  2026-02-28-settings-implementation.md  2026-02-28-settings-remote-channels-brainstorm.md  2026-02-28-terminal-element-implementation.md  2026-02-28-terminal-element-test-plan.md  2026-02-terminal-engine-COMPLETED.md  2026-02-terminal-engine-phase1-core.md  2026-02-terminal-engine-phase2-frame-loop.md  2026-02-terminal-engine-phase3-input-resize.md  2026-02-terminal-engine-phase4-integration.md  2026-02-terminal-engine-summary.md  2026-03-01-gpui-terminal-refactor-default-tmux.md  2026-03-01-local-pty-default-and-control-mode.md  2026-03-02-tmux-input-perf-direct-pty-write.md  2026-03-03-terminal-input-performance.md  2026-03-03-terminal-scroll-and-selection-design.md  2026-03-03-tmux-hex-send-keys.md  2026-03-gpui-terminal-refactor-default-tmux.md  README.md
resources/: generate_icon.py  pmux.entitlements  pmux.icns
src/: agent_status.rs  agent_status_test.rs  app.rs  app_state.rs  config.rs  config_test.rs  debug_log.rs  empty_state.rs  file_selector.rs  git_utils.rs  help_panel.rs  input_handler.rs  keyboard_shortcuts.rs  layout.rs  lib.rs  loading_state.rs  main.rs  mute_settings.rs  new_branch_dialog.rs  new_branch_orchestrator.rs  notification.rs  notification_manager.rs  notification_test.rs  pane_status_tracker.rs  resizable_sidebar.rs  shell_integration.rs  status_detector.rs  status_poller.rs  system_notifier.rs  terminal_poller.rs  window_state.rs  workspace_manager.rs  workspace_manager_test.rs  workspace_state.rs  worktree.rs  worktree_manager.rs
src/input/: xterm_escape.rs
src/remotes/: discord.rs  discord_gateway.rs  feishu.rs  kook.rs  kook_gateway.rs  mod.rs  publisher.rs  secrets.rs
src/runtime/: agent_runtime.rs  event_bus.rs  state.rs  status_publisher.rs
src/terminal/: bounds.rs  content_extractor.rs  cursor_coords.rs  engine.rs  input.rs  mod.rs  pty_reader.rs  pty_writer.rs  renderable_snapshot.rs  stream_adapter.rs  term_bridge.rs  term_bridge.rs.bak  terminal_core.rs  terminal_element.rs  terminal_input_handler.rs  terminal_rendering.rs
src/tmux/: mod.rs  pane.rs  session.rs  session_test.rs  window.rs
src/ui/: app_root.rs  app_root_test.rs  mod.rs  new_branch_dialog_entity.rs  new_branch_dialog_ui.rs  notification_panel.rs  notification_panel_entity.rs  sidebar.rs  split_pane_container.rs  startup_page.rs  status_bar.rs  tabbar.rs  terminal_area_entity.rs  terminal_controller.rs  terminal_element.rs  terminal_rendering.rs  terminal_view.rs  topbar.rs  topbar_entity.rs  workspace_view.rs
tests/: README.md  config_test.rs  content_extractor_test.rs  integration_test.rs  run_full_suite.sh  run_terminal_tests.sh  shell_integration_flows.rs  status_detector_osc133.rs  stream_adapter_test.rs  terminal_cursor.rs  terminal_element_integration.rs  terminal_engine_osc133.rs  terminal_rendering.rs  tmux_integration.rs  tmux_integration_test.sh  tui_compatibility.rs  workspace_restoration_test.rs
tests/automation/: switch_worktree.applescript
tests/e2e/: local_pty_e2e.sh  restart_echo_hello.sh  run_all.sh  run_tui_tests.sh  scenario_claude_code.sh  smoke_ls_pwd.sh  tmux_backend_e2e.sh  tmux_cc_e2e.sh  workflow_new_branch.sh  workflow_restore.sh  worktree_switch_tmux.sh
tests/functional/: run_all.sh
tests/helpers/: analyze_performance.py  compare_screenshots.py  keyboard.sh  recording.sh  screenshot.sh  window_control.sh
tests/performance/: framerate_benchmark.sh  paint_benchmark.sh  run_all.sh  run_perf_tests.sh  startup_benchmark.sh  typing_benchmark.sh
tests/regression/: README.md  (+6 more)
(+153 files in other folders)
